# PNG_Re-Sizer

./: README.md
pngResizerQtSourceCode/: CMakeLists.txt  icon.qrc  mainwindow.cpp  mainwindow.h
